style.css
html {
      font-family: Beleren2016SmallCaps-Bold;
      background-color: #212121;
      color: #ffffff;
      overflow: hidden;
}

/*
* {
      outline: 1px dotted red;
}

*/

.position {
      position: absolute;
}

.flexContainer {
      display: flex;
      flex-wrap: nowrap;
      gap: 10px;
      justify-content: center;
      /* margin-top: 30px; */
}

#titleSection {
      margin-top: 20px;
}

#graphData {
      width: 500px;
      overflow: auto;
}

#commanderTags {
      overflow: auto;
      width: 350px;
}

.barHolder {
      position: relative;
      height: 30px;
      width: 100%;
      display: flex;
      justify-content: left;
      align-items: center;
      flex-shrink: 0;
}

.tighterHolder {
      height: 20px !important;
}

.relatedTagHolder {
      position: relative;
      width: 100%;
      margin-top: 15px;
      margin-bottom: 10px;
}

.noGap {
      gap: 5px !important;
}

.paddingLeft {
      width: 45px;
      background-color: #212121;
}

.paddingRight {
      padding-right: 10px;
      background-color: #212121;
}

.horizontalRule {
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
      width: 95%;
      height: 2px;
      background: linear-gradient(to right, #0038a8cc, #9B4F96cc, #D60270cc),
                  #ffffff;
      z-index: 0;
}

.bar {
      position: relative;
      height: 80%;
      background-color: dimgrey;
}

.column {
      display: flex;
      flex-direction: column;
      justify-content: start !important;
}

#mainData {
      width: 100%;
}

#sideData {
      width: 0px;
}

.centeredFlex {
      align-items: center;
}

.card {
      mask-image: url('./images/cardBack.webp');
      mask-repeat: no-repeat;
      mask-size: contain;
}

#commanderData {
      position: relative;
      width: 350px;
}

.placement1 {
      left: 0px;
      top: 45px;
      z-index: 2 !important;
}

.placement2 {
      left: 30px;
      top: 0px;
      z-index: 1 !important;
}

.lineBreak {
      width: 90%;
      height: 3px;
      background: linear-gradient(to right, #0038A8, #9B4F96, #D60270);
      margin-bottom: 20px;
      margin-top: 5px;
}

.basicText {
      font-size: 16px;
      /* font-family: Beleren2016SmallCaps-Bold; */
      font-family: Beleren2016-Bold;
      color: #ffffff;
      white-space: nowrap;
      margin-left: 3px;
      margin-right: 3px;
}

.largeText {
      font-size: 24px !important;
}

.titleText {
      font-size: 36px !important;
}

.link {
      cursor: pointer;
}

.link-gray span {
      cursor: pointer;
      color: #a0a0a0 !important;
}

.link-gray:hover span {
      color: #ffffff !important;
}

.link-gray {
      cursor: pointer;
      color: #a0a0a0 !important;
}

.link-gray:hover {
      color: #ffffff !important;
}

.textRight {
      text-align: right;
      padding-right: 10px;
      right: 0px;
      top: 50%;
      transform: translateY(-50%);
}

.textLeft {
      text-align: left;
      left: 0px;
      top: 50%;
      transform: translateY(-50%);
}

.button {
      border: none;
      padding: 15px 32px;
      text-align: center;
      text-decoration: none;
      display: inline-block;
      font-size: 16px;
      cursor: pointer;
      transition: 0.3s;
      background: #212121;
      border-radius: 10px;
      width: 100%;
}

.button:hover {
      background: #161618;
}

.buttonText {
      font-family: Beleren2016-Bold;
      color: #ffffff;
      pointer-events: none;
}

.button-container {
      width: 70%;
      border-radius: 10px;
      position: relative;
      border: 1px solid rgba(0, 0, 0, 0.09);
      box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.09);
      margin: 10px;
}

.button-container .input-bg {
      position: absolute;
      inset: -2px;
      z-index: -1;
      border-radius: 10px;
      background: linear-gradient(to right, #0038A8, #9B4F96, #D60270);
      transform: scaleX(1);
}

.bottom-elements {
      margin-top: auto;
      margin-bottom: 50px;
      width: 100%;
      display: flex;
      flex-direction: column;
      align-items: center;
}

.bottom-element {
      width: 50%;
}

.bottom-element .button {
      padding: 10px 15px;
}

.hidden-element {
      display: none;
}

#urlInputContainer {
      margin-top: 4%;
}

#errorText {
      font-size: 30px;
      color: #ff0000;
}

.urlDiv {
      width: 60% !important;
}

.input-container {
      width: 80%;
      border-radius: 5px;
      position: relative;
      border: 1px solid rgba(0, 0, 0, 0.09);
      box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.09);
      margin: 10px;
}

.input-container input {
      width: calc(100% - 40px);
      padding: 15px 20px;
      border: none;
      outline: none;
      background: #212121;
      border-radius: 5px;
      font-size: 30px;
      transition: 0.3s ease;
      font-family: Beleren2016SmallCaps-Bold;
      color: #ffffff;
}

.input-container label {
      font-size: 34px;
      background: #212121;
      padding: 0 10px;
      pointer-events: none;
      position: absolute;
      left: 20px;
      top: 0;
      transform: translateY(-60%);
      letter-spacing: 1.5px;
}

.input-container .input-bg {
      position: absolute;
      inset: -2px;
      z-index: -1;
      border-radius: 5px;
      background: linear-gradient(to right, #0038A8, #9B4F96, #D60270);
      transform: scaleX(1);
}

.imgcontainer {
      filter: drop-shadow(-1px 6px 3px rgba(0, 7, 50, 0.5));
      z-index: 3;
}

.imgcontainer img {
      max-width: 100%;
      max-height: 100%;
}

@font-face {
      font-family: Beleren2016-Bold;
      /* set name */
      src: url(./fonts/Beleren2016-Bold.ttf);
      /* url of the font */
}

@font-face {
      font-family: Beleren2016SmallCaps-Bold;
      /* set name */
      src: url(./fonts/Beleren2016SmallCaps-Bold.ttf);
      /* url of the font */
}

